[Fix] use `re-wrap` in CSS to visually keep newlines rendered

--- a/src/editor/view/media/editor/editorBase.scss
+++ b/src/editor/view/media/editor/editorBase.scss
@@ -4,4 +4,9 @@
     & > .ProseMirror[contenteditable]:focus {
         outline: 0px solid transparent;
     }
+
+    & > .ProseMirror {
+        // https://stackoverflow.com/questions/588356/why-does-the-browser-renders-a-newline-as-space
+        white-space: pre-wrap;
+    }
 }
